fixed z-index on vertical navbar and made svg logos mobile responsive

--- a/src/components/SkillsSection/index.css
+++ b/src/components/SkillsSection/index.css
@@ -18,6 +18,7 @@
     top: 3px;
     fill: #727272;
     height: 62px;
+    min-height: 43px;
     margin-bottom: 7px;
 }
 
@@ -25,6 +26,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
     color: #727272;
 }
 
@@ -35,6 +38,10 @@
 
     .skill-icon {
         font-size: calc((800px - (800px - 100vw)) / 800 * 70);
+    }
+
+    .skill-icon-svg {
+        height: calc((800px - (800px - 100vw)) / 800 * 62);
     }
 }
 
