--- a/src/components/VerticalNav/index.css
+++ b/src/components/VerticalNav/index.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     top: 9%;
+    z-index: 100;
 }
 
 .vertical-nav-bar p {
